syntax = "proto3";

option csharp_namespace = "MeterReader.gRPC";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service MeterReaderService {
	rpc AddReading (ReadingPacket) returns (StatusMessage);
	rpc AddReadingStream (stream ReadingMessage) returns (stream ErrorMessage);
}


message ErrorMessage {
	string Message = 1;
}

message ReadingPacket {
	repeated ReadingMessage Readings = 1;
	ReadingStatus Succesful = 2;
}

message ReadingMessage {
	int32 CustomerId = 1;
	int32 ReadingValue = 2;
	string Notes = 3;
	google.protobuf.Timestamp ReadingTime = 5;
	reserved 4;
	reserved 'Succesful';
}

message StatusMessage {
	ReadingStatus Status = 1;
	string Message = 2;
}

enum ReadingStatus {
	Unknown = 0;
	Success = 1;
	Failure = 2;
}
